# pytest_ifixture

./: .gitignore  pyproject.toml
pytest_ifixture/: pytest_ifixture.py
src/: pytest_ifixture.py
tests/: conftest.py  test_fixtures.py  test_session.py
tests_dir/project/: README.md
tests_dir/project/articles/: logger.py
tests_dir/tests/: README.md  conftest.py
tests_dir/tests/tests/: test_articles.py
tests_dir/tests/tests/db/: test_db.py
