[tool.poetry]
name = "pytest_ifixture"
version = "0.1.0"
description = "Tools for working with fixtures from pytest in interactive console or scripts."
authors = ["Daniel Barton <daniel.barton@seznam.cz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "4.2.1"
attrs = "19.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
